<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme">
    <item
        android:id="@+id/favouriteMenuItem"
        android:title="@string/menu_favorite"
        app:showAsAction="always"/>
</menu>