<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/stocksListFragment"
        android:icon="@drawable/ic_stock_list"
        android:title="@string/main_nav_stocks_title"
        />

    <item
        android:id="@+id/favouriteStocksFragment"
        android:icon="@drawable/ic_stock_fav"
        android:title="@string/main_nav_favourites_title" />
</menu>